# SecureTheCloud-Microsoft-Copilot-Governance-Lab

./: .gitignore  AGENTS.md  ARCHITECTURE.md  GOVERNANCE.md  PROGRAM_CHARTER.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/doctrine/: contract_consumption_manifest.json
data/fixtures/: lab_state.json
data/platform/: workspace_registry.json
docs/: ARCHITECTURE.md  CONTROL_MATRIX.md  MICROSOFT_CONTROL_SOURCE_REFERENCES.md  SECURE_ADOPTION_CHECKLIST.md  THREAT_MODEL.md
docs/doctrine/: CONTRACT_CONSUMPTION.md
docs/phases/: PHASE_1_EVIDENCE_ENGINE_HARDENING.md  PHASE_1_LOCAL_VALIDATION_EVIDENCE.md  PHASE_2_PLATFORM_READINESS_ARCHITECTURE_EVIDENCE_WORKSPACE_SHELL.md  PHASE_3_DOCTRINE_CONTRACT_CONSUMPTION_DOWNSTREAM_ALIGNMENT_GATE.md  PHASE_TRACKER.md
docs/platform/: ASSESSMENT_HISTORY_WORKSPACE.md  CONTROL_CATALOG_WORKSPACE.md  EVIDENCE_INVENTORY_WORKSPACE.md  EVIDENCE_WORKSPACE_SHELL.md  EXECUTIVE_DASHBOARD_WORKSPACE.md  GOVERNANCE_COMMAND_CENTER.md  PLATFORM_READINESS_ARCHITECTURE.md  TENANT_READINESS_WORKSPACE.md
evidence/sample_reports/: control_results.json  doctrine_alignment_report.json  doctrine_alignment_summary.md  evidence_manifest.json  evidence_workspace.md  secure_adoption_summary.md  workspace_index.json
schemas/: control_results.schema.json  doctrine_alignment.schema.json  evidence_manifest.schema.json  lab_state.schema.json  workspace_index.schema.json
schemas/platform/: workspace_registry.schema.json
tests/: test_doctrine_alignment.py  test_evaluator.py  test_normalization.py  test_schema_validation.py  test_workspace.py
(+8 files in other folders)
