[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "securethecloud-copilot-governance-lab"
version = "0.1.0"
description = "Simulation-first Microsoft Copilot governance lab for SecureTheCloud readiness evidence."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
stc-copilot-lab = "stc_copilot_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
